--- a/app/globals.css
+++ b/app/globals.css
@@ -79,3 +79,15 @@
         @apply pl-5 mt-2 list-disc;
     }
 }
+
+@layer utilities {
+    .text-stroke-1 {
+        -webkit-text-stroke: 1px currentColor;
+    }
+    .text-stroke-2 {
+        -webkit-text-stroke: 2px currentColor;
+    }
+    .text-fill-transparent {
+        -webkit-text-fill-color: transparent;
+    }
+}
